--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: invision_server/wsgi.py
+    WSGIPath: "invision_server/wsgi.py"
