--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: invision_server.wsgi
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
