--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,3 +3,4 @@ option_settings:
     WSGIPath: invision_server.wsgi
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+    /:web
